--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "fyb_romania/module-notification-bar",
-    "description": "Notification Bar by FYB Romania",
+    "description": "Hello Bar - Top Bar Promotions by FYB Romania",
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "require": {
         "fyb_romania/module-base": "*"
     },
